force-app/main/default/objects/PSChatBotPackKA__mdt/PSChatBotPackKA__mdt.object-meta.xml
<CustomObject>
    <label>PSChatBotPackKA</label>
    <pluralLabel>PSChatBotPackKA</pluralLabel>
</CustomObject>