force-app/main/default/objects/PSChatBotPackKA__mdt/fields/Answer_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Answer_Field_API_Name__c</fullName>
    <label>Answer Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>