force-app/main/default/objects/PSChatBotPackKA__mdt/fields/Image_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_Field_API_Name__c</fullName>
    <label>Image Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>